# rules_rust block, please find documentation here:
# https://github.com/bazelbuild/rules_rust/releases
bazel_dep(name = "rules_rust", version = "0.71.3")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")

# when updating edition, please also update the edition in .rustfmt.toml
# and Cargo.toml
rust.toolchain(
    edition = "2024",
    versions = ["1.96.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension(
    "@rules_rust//crate_universe:extensions.bzl",
    "crate",
)
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//tools/rust:Cargo.lock",
    manifests = ["//tools/rust:Cargo.toml"],
)

# --- BEGIN feature:profiling ---
# crate_universe builds library targets only; the profiling renderer tools are
# bin crates, so their binaries must be requested explicitly.
crate.annotation(
    crate = "inferno",
    gen_binaries = [
        "inferno-collapse-perf",
        "inferno-flamegraph",
    ],
    repositories = ["crates"],
)
crate.annotation(
    crate = "flamelens",
    gen_binaries = ["flamelens"],
    repositories = ["crates"],
)
# --- END feature:profiling ---

use_repo(crate, "crates")
